--- a/按需加载/index.html
+++ b/按需加载/index.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8" />
 		<title></title>
 		<style>
+			*{
+				margin:0;
+				padding:0;
+			}
 			.imi{
 				width: 200px;
 				height: 200px;
